--- a/rootfs/Dockerfile
+++ b/rootfs/Dockerfile
@@ -1,17 +1,13 @@
 FROM alpine:3.3
 
 # add logger user
-RUN addgroup -S nginxpusher && \
-	adduser -S -G nginxpusher -H -h /opt/nginxpusher -D nginxpusher
+RUN addgroup -S stdout-metrics && \
+	adduser -S -G stdout-metrics -H -h /opt/stdout-metrics -D stdout-metrics
 
 ADD . /
 
 # Fix some permission since we'll be running as a non-root user.
-RUN chown -R nginxpusher:nginxpusher /opt/nginxpusher
-
-USER nginxpusher
-
-CMD /opt/nginxpusher/sbin/nginxpusher &
+RUN chown -R stdout-metrics:stdout-metrics /opt/stdout-metrics
+USER stdout-metrics
 EXPOSE 1514 8088
-
-ENV DEIS_RELEASE v2-beta
+CMD /opt/stdout-metrics/sbin/stdout-metrics
