--- a/manifests/deis-monitor-stdout-rc.yaml
+++ b/manifests/deis-monitor-stdout-rc.yaml
@@ -1,22 +1,22 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: deis-monitor-nginxpusher
+  name: deis-monitor-stdout
   namespace: deis
   labels:
     heritage: deis
 spec:
   replicas: 1
   selector:
-    app: deis-monitor-nginxpusher
+    app: deis-monitor-stdout
   template:
     metadata:
       labels:
-        app: deis-monitor-nginxpusher
+        app: deis-monitor-stdout
     spec:
       containers:
-      - name: deis-monitor-nginxpusher
-        image: quay.io/deis/nginxpusher:canary
+      - name: deis-monitor-stdout
+        image: quay.io/deis/stdout-metrics:canary
         imagePullPolicy: Always
         ports:
         - containerPort: 1514
